--- a/templates/component/_footer.html.twig
+++ b/templates/component/_footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer-container footer-upper">
-        <a href="{{ path('about_us') }}">A propos de KYOSC</a>
+        <a href="{{ path('about_kyosc') }}">A propos de KYOSC</a>
         <a href="{{ path('faq') }}">FAQ</a>
         <a href="mailto:contact@kyosc.com">Nous contacter</a>
     </div>
