aboutUs corrected (images on mobile device, modal and image weight

--- a/assets/styles/about.scss
+++ b/assets/styles/about.scss
@@ -55,3 +55,12 @@
         margin-top: 20px;
     }
 }
+
+.about-image {
+    width: 280px;
+    height: auto;
+
+    @include md {
+        width: 380px;
+    }
+}
