--- a/templates/about/aboutKyosc.html.twig
+++ b/templates/about/aboutKyosc.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
 <section class="d-flex flex-column align-items-center">
     <h1 class="arrow-header hide-before-scroll show-on-scroll">A propos de KYOSC</h1>
-    <img src="{{ asset('build/images/aboutUs/canoe.png') }}" class="w-25">
+    <img src="{{ asset('build/images/aboutUs/canoe.png')|imagine_filter('compress') }}" class="about-image">
     <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
         <p class="pre-line">
             Les sportifs amateurs et néophytes font partie d’un ou de plusieurs clans. Ils sont de plus en plus nombreux notamment avec l’apparition de la crise liée à la pandémie et à ses impacts sur leurs modes de vie.
@@ -16,7 +16,7 @@
             Dans le même temps, les marques et les destinations ont besoin de se rapprocher de leurs clientèles en communicant directement de façon privilégiée et de s’engager plus étroitement avec les sportifs amateurs en les accompagnant pendant leurs aventures.
         </p>
     </div>
-    <img src="{{ asset('build/images/aboutUs/run.png') }}" class="w-25 ml-5">
+    <img src="{{ asset('build/images/aboutUs/run.png')|imagine_filter('compress') }}" class="about-image">
     <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
         <p class="pre-line">
             KYOSC est une plateforme de partage et de publication d’aventures créés par des sportifs amateurs pour interagir avec leurs « clans » et les rapprocher des marques, des destinations et des prestataires de services partenaires de KYOSC.
@@ -28,7 +28,7 @@
             Accéder pour les marques et les destinations à une relation directe et privilégiée avec les groupes. Impliquées dans les aventures sportives des clans, les marques et les destinations profitent de leur visibilité en situation de pratique sur les réseaux sociaux.
         </p>
     </div>
-    <img src="{{ asset('build/images/aboutUs/victory.png') }}" class="w-25">
+    <img src="{{ asset('build/images/aboutUs/victory.png')|imagine_filter('compress') }}" class="about-image">
     <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
         <p class="pre-line">
             Bertrand Ollagnon co-fondateur CEO, dirigeant Digit Thinker, Conseil et Design en stratégies digitales. Il apporte au projet ses compétences commerciales, marketing et communication et son réseau dans les secteurs du digital, du tourisme et de l’outdoor.
@@ -36,7 +36,7 @@
             Jean-Christophe Simon co-fondateur COO, président de Calsoï, Accompagnement de dirigeants. Il apporte au projet ses compétences en stratégie, innovation, recherche et développement et son réseau dans les secteurs start-up, deep tech et fonds d’investissements.
         </p>
     </div>
-    <img src="{{ asset('build/images/aboutUs/velo.png') }}" class="w-25">
+    <img src="{{ asset('build/images/aboutUs/velo.png')|imagine_filter('compress') }}" class="about-image">
     <div class="my-5 p-4 w-75 transparent-background-dark d-flex flex-column justify-content-center align-items-center hide-before-scroll show-on-scroll">
         <p class="pre-line">
             KYOSC est une marque inspirante et fédératrice de la communauté Outdoor en accord avec les valeurs d’inclusion et d’éco-responsabilité que nous défendons.
@@ -44,64 +44,66 @@
         </p>
         {% if bertrand and jeanC %}
         <div class="d-flex justify-content-around align-items-center w-100">
-            <div class="form-kyosc mb-3 mb-md-0">
+            <div class="form-kyosc mb-3 mb-md-0 mx-1">
                 <a class="btn text-uppercase btn-profil"
                    data-toggle="modal" data-target="#modalContactBertrand"
                 >Contacter Bertrand</a>
             </div>
-            <div class="form-kyosc mb-3 mb-md-0">
+            <div class="form-kyosc mb-3 mb-md-0 mx-1">
                 <a class="btn text-uppercase btn-profil"
                    data-toggle="modal" data-target="#modalContactJeanC"
                 >Contacter Jean-Christophe</a>
             </div>
         </div>
-            {#        modal for Bertrand contact pop-up#}
-            <div class="modal fade" id="modalContactBertrand" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h2 class="modal-title" id="exampleModalLongTitle">Contactez {{ bertrand.firstname }}</h2>
-                        </div>
-                        <div class="modal-body d-flex justify-content-center align-items-center bg-dark">
-                            <form class="w-100 d-flex flex-column justify-content-center align-items-center mb-4 form-kyosc" method="post" action="{{ path('profil_contact-user', {id: bertrand.id}) }}">
-                                <input type="hidden" name="token" value="{{ csrf_token('contact-user') }}"/>
-                                <textarea name="contactMessage" class="w-75" placeholder="Entrez votre message pour {{ bertrand.firstname }} ici" required></textarea>
-                                <button
-                                        class="btn text-uppercase btn-login my-4"
-                                >Envoyer</button>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {#       end of modal for Bertrand contact pop-up#}
-            {#        modal for JC contact pop-up#}
-            <div class="modal fade" id="modalContactJeanC" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h2 class="modal-title" id="exampleModalLongTitle">Contactez {{ jeanC.firstname }}</h2>
-                        </div>
-                        <div class="modal-body d-flex justify-content-center align-items-center bg-dark">
-                            <form class="w-100 d-flex flex-column justify-content-center align-items-center mb-4 form-kyosc" method="post" action="{{ path('profil_contact-user', {id: jeanC.id}) }}">
-                                <input type="hidden" name="token" value="{{ csrf_token('contact-user') }}"/>
-                                <textarea name="contactMessage" class="w-75" placeholder="Entrez votre message pour {{ jeanC.firstname }} ici" required></textarea>
-                                <button
-                                        class="btn text-uppercase btn-login my-4"
-                                >Envoyer</button>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
-                                </button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {#       end of modal for JC contact pop-up#}
         {% endif %}
     </div>
+    {% if bertrand and jeanC %}
+    {#        modal for Bertrand contact pop-up#}
+    <div class="modal fade" id="modalContactBertrand" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="exampleModalLongTitle">Contactez {{ bertrand.firstname }}</h2>
+                </div>
+                <div class="modal-body d-flex justify-content-center align-items-center bg-dark">
+                    <form class="w-100 d-flex flex-column justify-content-center align-items-center mb-4 form-kyosc" method="post" action="{{ path('profil_contact-user', {id: bertrand.id}) }}">
+                        <input type="hidden" name="token" value="{{ csrf_token('contact-user') }}"/>
+                        <textarea name="contactMessage" class="w-75" placeholder="Entrez votre message pour {{ bertrand.firstname }} ici" required></textarea>
+                        <button
+                                class="btn text-uppercase btn-login my-4"
+                        >Envoyer</button>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#       end of modal for Bertrand contact pop-up#}
+    {#        modal for JC contact pop-up#}
+    <div class="modal fade" id="modalContactJeanC" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="exampleModalLongTitle">Contactez {{ jeanC.firstname }}</h2>
+                </div>
+                <div class="modal-body d-flex justify-content-center align-items-center bg-dark">
+                    <form class="w-100 d-flex flex-column justify-content-center align-items-center mb-4 form-kyosc" method="post" action="{{ path('profil_contact-user', {id: jeanC.id}) }}">
+                        <input type="hidden" name="token" value="{{ csrf_token('contact-user') }}"/>
+                        <textarea name="contactMessage" class="w-75" placeholder="Entrez votre message pour {{ jeanC.firstname }} ici" required></textarea>
+                        <button
+                                class="btn text-uppercase btn-login my-4"
+                        >Envoyer</button>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#       end of modal for JC contact pop-up#}
+    {% endif %}
 </section>
 {% endblock %}
