text corrected in help-organise modal + better styling for help mail

--- a/templates/email/base.html.twig
+++ b/templates/email/base.html.twig
@@ -8,8 +8,8 @@
 </head>
 <body class="w-75">
     {% block content %}{% endblock %}
-    <a href="https://kyosc.com/" class="p-3 m-3" style="background-color: black;">
-        <img src="https://kyosc.com/build/images/logo/kyoscblanc.0fb22059.png" style="height: 150px;">
+    <a href="https://kyosc.com/" style="background-color: black; margin: 30px 10px;">
+        <img src="https://kyosc.com/build/images/logo/kyoscblanc.0fb22059.png" style="height: 150px; max-width: 250px; margin-top: 50px;">
     </a>
     <p>A bientôt sur la plateforme !</p>
     <p>l'équipe Kyosc</p>
