--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -170,7 +170,7 @@
                 <div class="modal-header d-flex flex-column">
                     <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">Demande de co-organisation de l'aventure par KYOSC</h2>
                     <p class="pre-line">En séléctionnant cette option vous serez mis en contact avec un collaborateur KYOSC pour vous aider à organiser votre aventure
-                        (% sur le PU de chaque participant)</p>
+                        (% sur le coût total)</p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
