--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -26,6 +26,22 @@ h1, h2 {
 }
 
 h2 {
+    font-size: 1.3rem;
+
+    @include sm {
+        font-size: 1.5rem;
+    }
+
+    @include md {
+        font-size: 1.7rem;
+    }
+
+    @include xl {
+        font-size: 2rem;
+    }
+}
+
+h1, .h1 {
     font-size: 1.4rem;
 
     @include sm {
@@ -33,11 +49,11 @@ h2 {
     }
 
     @include md {
-        font-size: 1.8rem;
+        font-size: 2rem;
     }
 
     @include xl {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 }
 
@@ -377,4 +393,8 @@ body {
 
 .pre-line {
     white-space: pre-line;
+}
+
+.min-height-200 {
+    min-height: 200px;
 }
