--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -6,23 +6,13 @@
     <meta property="og:title"         content="{{ challenge.title }}" />
     <meta property="og:description"   content="{{ challenge.description }}" />
     <meta property="og:image"
-          content="
-                {% if challenge.challengePhoto is not null %}
-                    kyosc.com{{ vich_uploader_asset(challenge, 'challengePhotoFile') }}
-                {% else %}
-                    kyosc.com/uploads/challenge/challenge-default.jpeg
-                {% endif %}" />
+          content="{% if challenge.challengePhoto is not null %}kyosc.com{{ vich_uploader_asset(challenge, 'challengePhotoFile') }}{% else %}kyosc.com/uploads/challenge/challenge-default.jpeg{% endif %}" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="{{ challenge.creator.pseudo? : challenge.creator.firstname ~ challenge.creator.lastname }}">
     <meta name="twitter:site" content="{{ app.request.uri }}">
     <meta name="twitter:title" content="{{ challenge.title }} par {{ challenge.creator.pseudo? : challenge.creator.firstname ~ challenge.creator.lastname }}">
     <meta name="twitter:description" content="{{ challenge.description }}">
-    <meta name="twitter:image" content="
-                {% if challenge.challengePhoto is not null %}
-                    kyosc.com{{ vich_uploader_asset(challenge, 'challengePhotoFile') }}
-                {% else %}
-                    kyosc.com/uploads/challenge/challenge-default.jpeg
-                {% endif %}">
+    <meta name="twitter:image" content="{% if challenge.challengePhoto is not null %}kyosc.com{{ vich_uploader_asset(challenge, 'challengePhotoFile') }}{% else %}kyosc.com/uploads/challenge/challenge-default.jpeg{% endif %}">
 {% endblock %}
 
 {% block title %}Aventure #{{ challenge.id }}{% endblock %}
@@ -54,16 +44,16 @@
         </div>
     </header>
     <section class="container px-5 my-2 my-md-5">
-        <div class="row justify-content-center justify-content-md-around">
+        <div class="row justify-content-center justify-content-md-around text-break">
             <div class="col-lg-6 transparent-background-dark p-3">
                 <h3 class="challenge-quotation mb-4 pre-line">{{ challenge.quotation }}</h3>
                 <p class="challenge-description pre-line">{{ challenge.description|auto_link|raw }}</p>
             </div>
         </div>
     </section>
-    <section class="container d-flex flex-row">
+    <section class="container d-flex flex-column flex-md-row justify-content-center align-items-center">
         <div class="container arrow-container col-lg-8 col-sm-12">
-            <h2 class="text-center transparent-background-dark p-3" style="color: {{color}}">LES INFORMATIONS CLEFS</h2>
+            <h2 class="text-center transparent-background-dark p-3 text-uppercase" style="color: {{color}}">Les informations clés</h2>
             <div class="arrow-info key-info-arrow" style="background-color: {{color}}">
                 <div class="row">
                     <div class="col-lg-12 ">
@@ -139,7 +129,7 @@
     </section>
     {% if challenge.information %}
     <div class="mt-2 mb-4 container d-flex justify-content-center">
-        <div class="col-10 title-info-event transparent-background-dark p-3">
+        <div class="col-10 title-info-event transparent-background-dark p-3 text-break">
             <h3>Informations complémentaires sur cette aventure:</h3>
             <p class="pre-line">{{ challenge.information|auto_link|raw }}</p>
         </div>
@@ -279,7 +269,7 @@
                 {% for message in challenge.messages|reverse %}
                     {% if message.isPublic %}
                         <div class="{% if app.user == message.author %}align-self-end text-right{% endif %} position-relative">
-                            <div class="m-3 bubble {% if app.user == message.author %}bubble-bottom-right{% else %}bubble-bottom-left{% endif %}">
+                            <div class="text-break m-3 bubble {% if app.user == message.author %}bubble-bottom-right{% else %}bubble-bottom-left{% endif %}">
                                 <p class="pre-line">{{ message.content|auto_link }}</p>
                                 {% if app.user and is_granted("ROLE_ADMIN") or app.user == message.author or app.user == challenge.creator %}
                                     {{ include('message/_delete_form.html.twig') }}
