--- a/assets/styles/form.scss
+++ b/assets/styles/form.scss
@@ -31,7 +31,7 @@
 
     small {
         font-family: $font-text;
-        font-weight: $weight-light-text;
+        font-weight: $weight-secondary-title;
     }
 
     .btn-login {
