--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -19,6 +19,7 @@ $transparent-black: #1118;
 $transparent-dark: #111d;
 $light: #fff;
 $transparent-light: #fff8;
+$text-muted: #111;
 
 $pagination-active-bg: $black;
 $pagination-color: $black;
