--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}KYOSC{% endblock %}
 
 {% block body %}
-    <div class="home-menu d-flex">
+    <div class="home-menu d-flex justify-content-between align-items-center w-100">
         {{ include('component/_burger-content.html.twig') }}
         <button class="navbar-dark navbar-toggler home-logo mr-md-auto" type="button">
             <span class="navbar-toggler-icon"></span>
