Issue with ajax request -> url for avatar where set on localhost

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -88,9 +88,9 @@
                             if (user.pseudo !== null) {
                                 pseudoUser = '"' + user.pseudo + '"';
                             }
-                            let avatar = "<img src='/uploads/profils/default-profil-picture.png' alt='default profil picture' class='avatar-testimony'>";
+                            let avatar = "<img src='https://kyosc.com/uploads/profils/default-profil-picture.png' alt='default profil picture' class='avatar-testimony'>";
                             if (user.profilPhoto !== null) {
-                                avatar = `<img src='http://127.0.0.1:8000/media/cache/avatar_thumb/uploads/profils/${
+                                avatar = `<img src='https://kyosc.com/media/cache/avatar_thumb/uploads/profils/${
                                     user.profilPhoto
                                 }' class='avatar-testimony'>`;
                             }
