--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -21,7 +21,7 @@
     {% if sportColor and sport %}
         <header class="index-header d-flex align-items-center text-center text-uppercase mt-5 mb-5" style="background: {{ sportColor }};">
             <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
-            <h1 class="challenge-index-title">
+            <h1 class="ml-1 challenge-index-title">
                 les aventures
                 <span class="text-white">"{{ sport.name }}"</span>
             </h1>
@@ -31,7 +31,7 @@
                 {% else %} class="d-flex align-items-center text-uppercase mt-3 mb-5 bg-dark text-white"
                 {% endif %}>
             <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
-            <h1 class="challenge-index-title text-white">Toutes les aventures
+            <h1 class="ml-1 challenge-index-title text-white">Toutes les aventures
                 {% if category %}
                     "{{ category.name }}"
                 {% endif %}
