--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -221,6 +221,26 @@
     </div>
     {#       end of modal for youtube video pop-up#}
 
+    {#        modal for pictures upload pop-up#}
+    <div class="modal fade" id="pictureForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">Partagez une photo en lien avec cette aventure !</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body d-flex justify-content-center">
+                    {{ form_start(formPicture) }}
+                    {{ form_widget(formPicture) }}
+                    {{ form_end(formPicture) }}
+                </div>
+            </div>
+        </div>
+    </div>
+    {#       end of modal for pictures upload pop-up#}
+
     <div class="container w-75 mx-auto my-5 challenge-organisator transparent-background-dark p-3">
         <h2 class="mb-3 h5 text-uppercase text-center" style="color: {{color}}">Qui organise l'aventure ?</h2>
         <div class="row">
@@ -299,6 +319,27 @@
         {% endif %}
     </div>
     {% endif %}
+    <div class="w-100 mx-auto my-5 participants transparent-background-dark p-3">
+        <h2>Photos de l'aventure</h2>
+        {% if app.user and app.user == challenge.creator or app.user in challenge.participants or is_granted("ROLE_ADMIN") %}
+            <a class="journey-link-dark mb-3" data-toggle="modal" data-target="#pictureForm">
+                <h2 class="mt-5 arrow-header">Ajoutez des photos !<br>
+                    <img src="{{ asset('build/images/fleche/fbnoir.png') }}" class="w-25">
+                </h2>
+            </a>
+        {% endif %}
+        <div class="row mt-3">
+            {% for picture in challenge.pictures|reverse %}
+            <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column p-1 hide-before-scroll show-on-scroll"
+               href="{{ vich_uploader_asset(picture, 'pathFile')}}"
+               download="{{ picture.path }}"
+               style="background: url('{{ vich_uploader_asset(picture, 'pathFile')}}') no-repeat center; background-size: cover;"
+            ></a>
+            {% else %}
+                <p class="mx-auto my-3">Cette aventure n'a pas encore de photo</p>
+            {% endfor %}
+        </div>
+    </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2>Vidéos</h2>
         {% if app.user and app.user == challenge.creator or app.user in challenge.participants %}
