--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -330,11 +330,15 @@
         {% endif %}
         <div class="row mt-3">
             {% for picture in challenge.pictures|reverse %}
-            <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column p-1 hide-before-scroll show-on-scroll"
+            <a class="col-6 col-md-3 text-decoration-none home-square-box d-flex flex-column p-1 hide-before-scroll show-on-scroll position-relative"
                href="{{ vich_uploader_asset(picture, 'pathFile')}}"
                download="{{ picture.path }}"
                style="background: url('{{ vich_uploader_asset(picture, 'pathFile')}}') no-repeat center; background-size: cover;"
-            ></a>
+            >
+                {% if app.user and is_granted("ROLE_ADMIN") or app.user == picture.author or app.user == challenge.creator %}
+                    {{ include('picture/_delete_form.html.twig') }}
+                {% endif %}
+            </a>
             {% else %}
                 <p class="mx-auto my-3">Cette aventure n'a pas encore de photo</p>
             {% endfor %}
